--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,14 +5,15 @@
 }
 
 .container {
+  position: relative;
   width: 1140px;
   margin: 0 auto;
 }
 
 .promo {
-  padding: 39px 0px 62px 0;
   height: 900px;
   background: url('../img/bg/main_bg.png') center center/cover no-repeat;
+  padding: 39px 0px 62px 0;
 }
 
 .logo .logo_img {
@@ -120,7 +121,7 @@ h2.title {
 }
 
 .waiting {
-  height: 604px;
+  min-height: 604px;
   background-color: #efefef;
   padding: 85px 0 75px 0;
 }
@@ -152,13 +153,12 @@ h2.title {
 }
 
 .waiting .waiting_wrapper {
+  display: flex;
+  justify-content: space-between;
   margin-top: 45px;
 }
 
 .waiting .waiting_wrapper .waiting_item {
-  display: inline-block;
-  vertical-align: top;
-  margin: 0 15px;
   width: 339px;
   text-align: center;
 }
@@ -173,4 +173,40 @@ h2.title {
   font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
+}
+
+.optimization {
+  min-height: 550px;
+  padding: 102px 0 107px 0;
+}
+
+.optimization .optimization_header {
+  margin-left: 391px;
+  color: #299cbd;
+  font-family: 'Roboto - Black';
+  font-size: 29px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.optimization .optimization_text {
+  margin-top: 25px;
+  margin-left: 391px;
+  font-family: 'Roboto Light';
+  font-weight: 300;
+  font-size: 17px;
+  line-height: 27px;
+  color: #4a4a4a;
+}
+
+.optimization .optimization_text span {
+  font-family: 'Roboto - Bold';
+  font-weight: 700;
+}
+
+.optimization .optimization_img {
+  position: absolute;
+  top: -54px;
+  left: -240px;
+  z-index: -1;
 }
